# shared-logistics-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nixpacks.toml  package-lock.json  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
docs/: FRONTEND_SPECIFICATION.md
frontend/: README.md  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/carrier/: page.tsx
frontend/app/pooling/: page.tsx
frontend/app/quote/: page.tsx
frontend/components/: activity-timeline.tsx  dashboard-content.tsx  hero-section.tsx  navbar.tsx  pooling-feed.tsx  quick-actions.tsx  route-map.tsx  stats-bar.tsx
frontend/components/analytics/: analytics-dashboard.tsx  carrier-leaderboard.tsx  demand-heatmap.tsx  kpi-cards.tsx  pooling-performance.tsx  revenue-chart.tsx  savings-table.tsx  top-lanes-chart.tsx
frontend/components/auth/: register-form.tsx  sign-in-form.tsx
frontend/components/carrier/: active-loads.tsx  available-loads.tsx  carrier-earnings.tsx  carrier-header.tsx  carrier-portal.tsx  carrier-profile.tsx
frontend/components/mobile/: mobile-tracking-view.tsx
frontend/components/pooling/: pooling-card.tsx  (+3 more)
frontend/lib/: api.ts  auth-context.tsx
scripts/: init-db.sql  start-all.bat  start-backend.bat  start-frontend.bat  train_models.py
src/api/: main.py
src/core/: models.py
src/ml/: __init__.py
src/services/: auth_service.py  realtime_optimizer.py
tests/simulation/: simulator.py
(+41 files in other folders)
